fixed resume reslution on mobile version

--- a/frontend/src/Components/Projects.module.css
+++ b/frontend/src/Components/Projects.module.css
@@ -59,8 +59,6 @@ p {
     p {
         font-size: auto;
         max-width: 700px;
-        margin-left: 30px;
-        margin-right: 30px;
     }
 
     h1 {
