--- a/frontend/src/Components/ResumeSection.module.css
+++ b/frontend/src/Components/ResumeSection.module.css
@@ -43,3 +43,11 @@
     text-align: start;
     align-self: flex-start;
 }
+
+@media screen and (max-width: 1200px) {
+    .section {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+    }
+
+}
